--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
     "connect-multiparty": "^2.1.1",
     "express": "^4.14.0",
+    "mocha": "^5.2.0",
     "mongoose": "^4.6.6"
   },
   "devDependencies": {
